--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,3 @@
-
 {
   "short_name": "Registro Ore",
   "name": "Registro Permessi e Straordinari",
@@ -13,10 +12,12 @@
     {
       "src": "https://i.imgur.com/22460i5.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "any maskable"
     }
   ],
   "start_url": ".",
+  "scope": ".",
   "display": "standalone",
   "theme_color": "#0D47A1",
   "background_color": "#F5F5F5"
