--- a/manifest.json
+++ b/manifest.json
@@ -7,13 +7,13 @@
       "src": "https://i.imgur.com/p1h4G3d.png",
       "type": "image/png",
       "sizes": "192x192",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "https://i.imgur.com/22460i5.png",
       "type": "image/png",
       "sizes": "512x512",
-      "purpose": "any maskable"
+      "purpose": "any"
     }
   ],
   "start_url": ".",
